# wiki-searcher-demo

./: Makefile  README.md  pyproject.toml
src/wiki_searcher/: __main__.py  configuration.py  logger.py
src/wiki_searcher/api/: client.py  parameters.py
src/wiki_searcher/api/impl/: hugging_face_client.py
src/wiki_searcher/core/models/: language_model.py
src/wiki_searcher/core/models/impl/: summarizer.py
src/wiki_searcher/core/searcher/: searcher.py
src/wiki_searcher/core/searcher/impl/: external.py
src/wiki_searcher/core/storage/: storage.py
src/wiki_searcher/core/storage/impl/: external.py
